Styling for new copy on home page

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -9,6 +9,7 @@
     </div>
     <div class="col-xs" *ngIf="!user">
       <h1>{{'start.header.title' | translate }}</h1>
+      <h3 class="home-header-subtitle">{{'start.header.subtitle' | translate }}</h3>
       <div class="header-box-text">
         {{'start.header.body' | translate }}
       </div>
