--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -11,6 +11,15 @@
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.75);
   }
 
+  .home-header-subtitle {
+    padding: 1em 0;
+  }
+
+  .header-box-text {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
   a:first-of-type {
     margin-bottom: 0.5em;
   }
