fixed month format in job details page

--- a/src/app/views/job-details/job-details.component.html
+++ b/src/app/views/job-details/job-details.component.html
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="col-xs-11">
-          <p class="job-preview-text">{{job.jobDate | date: 'yyyy-mm-dd'}} - {{job.jobEndDate | date: 'yyyy-mm-dd'}}</p>
+          <p class="job-preview-text">{{job.jobDate | date: 'yyyy-MM-dd'}} - {{job.jobEndDate | date: 'yyyy-MM-dd'}}</p>
           <hr class="job-details-separator"/>
         </div>
       </div>
