--- a/src/app/views/confirmation/confirmation.component.html
+++ b/src/app/views/confirmation/confirmation.component.html
@@ -32,4 +32,15 @@
       </div>
     </div>
   </div>
+  <div *ngIf="type === 'password-reset'" class="confirmation-item table text-center">
+    <i routerLink="{{JARoutes.login.url()}}" class="fa fa-times fa-2x confirm-close-button"></i>
+    <div class="table-row">
+      <div class="table-cell">
+        <div class="item-icon"><i class="fa fa-envelope fa-5x" aria-hidden="true"></i></div>
+        <h3 class="confirmation-item-title">{{'confirmation.password.reset' | translate}}</h3>
+        <p class="confirmation-item-content">{{'confirmation.password.reset.description' | translate}}</p>
+        <div class="button-container"><a class="btn-primary btn-small btn" routerLink="{{JARoutes.login.url()}}">{{'confirmation.password.reset.button' | translate}}</a></div>
+      </div>
+    </div>
+  </div>
 </div>
