Fixed image aspect ratios

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -116,6 +116,7 @@
         .navigation-menu-user-container {
           .navigation-menu-user-logged-in-container {
             img {
+              object-fit: cover;
               margin-top: 20px;
               width: 70px;
               height: 70px;
