--- a/src/app/styles/buttons.scss
+++ b/src/app/styles/buttons.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@import './colors';
 @import './typography';
 
 /* Style guide button styles */
@@ -19,6 +19,7 @@
   margin: 15px;
   line-height: 2.3;
   border: 2px solid;
+  @include truncate-owerflowing-text;
 }
 
 /*SIZE*/
