--- a/src/app/views/forgot-password/forgot-password.component.scss
+++ b/src/app/views/forgot-password/forgot-password.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables';
-@import '../../styles/buttons';
+@import '../../styles/colors';
+
 
 .forgot-password-form-container {
   padding-top: 50px;
