--- a/src/app/views/jobs/jobs.component.scss
+++ b/src/app/views/jobs/jobs.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables';
-@import '../../styles/tooltips';
+@import '../../styles/colors';
+@import '../../styles/dimensions';
 
 .map-container {
   .tooltip-top {
