--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
-@import './styles/variables';
+@import './styles/dimensions';
+@import './styles/colors';
 
 .navbar-container {
   height: 100%;
@@ -43,7 +44,7 @@
       vertical-align: center;
       line-height: 22px;
       margin: auto;
-      margin-right: $header-button-margin;
+      margin-right: 12px;
       text-transform: uppercase;
       user-select: none;
 
@@ -322,7 +323,6 @@
         }
 
         > p {
-          font-family: $museo;
           margin: 0;
           text-align: center;
 
