--- a/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
+++ b/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.scss
@@ -1,6 +1,6 @@
-@import '../../styles/variables';
+@import '../../styles/colors';
+@import '../../styles/typography';
 
-$background-color: $default-bg-color;
 $ms-item-text-color: $white;
 $disabled-background-color: #eeeeee;
 
@@ -17,7 +17,7 @@ $disabled-background-color: #eeeeee;
       right: 10px;
       top: calc(50% - 8px);
       font-size: 8px;
-      background-color: $background-color;
+      background-color: $default-bg-color;
       cursor: pointer;
 
       &.disabled {
@@ -28,10 +28,10 @@ $disabled-background-color: #eeeeee;
 
   .autocomplete-dropdown-container {
     border: 1px solid rgba(0, 0, 0, 0.15);
-    background-color: $background-color;
+    background-color: $default-bg-color;
 
     &.table {
-      background-color: $background-color;
+      background-color: $default-bg-color;
     }
 
     .form-control {
@@ -56,7 +56,7 @@ $disabled-background-color: #eeeeee;
     padding: 5px 0;
     margin: 2px 0 0;
     list-style: none;
-    background-color: $background-color;
+    background-color: $default-bg-color;
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, 0.15);
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
