--- a/src/app/components/cookie-bar/cookie-bar.component.scss
+++ b/src/app/components/cookie-bar/cookie-bar.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables';
-@import '../../styles/buttons';
+@import '../../styles/colors';
+@import '../../styles/dimensions';
 
 .cookie-message {
   text-align: center;
