--- a/src/app/components/job-map-marker/job-map-marker.component.scss
+++ b/src/app/components/job-map-marker/job-map-marker.component.scss
@@ -1,5 +1,4 @@
-@import '../../styles/variables';
-@import '../../styles/buttons';
+@import '../../styles/colors';
 
 .job-map-marker-info-header {
   font-weight: bold;
