--- a/src/app/components/pager/pager.component.scss
+++ b/src/app/components/pager/pager.component.scss
@@ -1,6 +1,14 @@
-@import '../../styles/variables';
-@import '../../styles/buttons';
-@import '../../styles/mixins';
+@import '../../styles/colors';
+
+
+@mixin navigationButtonProperties($text-alignment, $primary-color) {
+  padding-top: 0.4em;
+  text-align: $text-alignment;
+  color: $primary-color;
+  > i {
+    cursor: pointer; cursor: hand;
+  }
+}
 
 
 .pagination-wrapper {
@@ -17,12 +25,12 @@
 }
 
 .back-button {
-  @include NavigationButtonProperties(left, $color-primary-cerise);
+  @include navigationButtonProperties(left, $color-primary-cerise);
   padding-top: 0;
 }
 
 .forward-button {
-  @include NavigationButtonProperties(right, $color-primary-cerise);
+  @include navigationButtonProperties(right, $color-primary-cerise);
   padding-top: 0;
 }
 
