--- a/src/app/views/confirmation/confirmation.component.scss
+++ b/src/app/views/confirmation/confirmation.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables';
-@import '../../styles/buttons';
+@import '../../styles/colors';
+
 
 .confirmation-container {
   width: 100%;
