--- a/src/app/views/cookies-about/cookies-about.component.scss
+++ b/src/app/views/cookies-about/cookies-about.component.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables';
+@import '../../styles/colors';
 
 .cookies-about-container {
   background-color: $default-bg-color;
