--- a/src/app/views/faq/faq.component.scss
+++ b/src/app/views/faq/faq.component.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables';
-@import '../../styles/buttons';
+@import '../../styles/colors';
+
 
 .faq-list-container {
   background-color: $default-bg-color;
