--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -1,5 +1,4 @@
-@import '../../styles/variables';
-@import '../../styles/buttons';
+@import '../../styles/colors';
 
 .login-container {
   .login-form-container {
