--- a/src/app/views/my-jobs/my-jobs.component.scss
+++ b/src/app/views/my-jobs/my-jobs.component.scss
@@ -1,5 +1,4 @@
-@import '../../styles/variables';
-@import '../../styles/buttons';
+@import '../../styles/colors';
 
 .my-jobs-header-tab {
   padding: 8px;
