--- a/src/app/views/reset-password/reset-password.component.scss
+++ b/src/app/views/reset-password/reset-password.component.scss
@@ -1,5 +1,4 @@
-@import '../../styles/variables';
-@import '../../styles/buttons';
+@import '../../styles/colors';
 
 .reset-password-form-container {
   padding-top: 50px;
