--- a/src/app/views/user/user-settings/user-details/user-details.component.scss
+++ b/src/app/views/user/user-settings/user-details/user-details.component.scss
@@ -1,5 +1,4 @@
-@import '../../../../styles/variables';
-@import '../../../../styles/buttons';
+@import '../../../../styles/colors';
 
 .settings-form-container {
   padding-top: 50px;
