--- a/src/app/views/user/user-settings/user-profile/user-profile.component.scss
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.scss
@@ -1,5 +1,4 @@
-@import '../../../../styles/variables';
-@import '../../../../styles/buttons';
+@import '../../../../styles/colors';
 
 .profile-form-container {
   padding-top: 50px;
