--- a/src/app/views/job-details/job-details.component.html
+++ b/src/app/views/job-details/job-details.component.html
@@ -32,7 +32,7 @@
 
       <div *ngIf="userJob && userJob.accepted && !userJob.willPerform">
         <h5 class="time-left-text">{{'assignment.status.offer' | translate}} {{userJob.remainsConfirmationHours}} {{'common.hour' | translate}} {{userJob.remainsConfirmationMinutes}} {{'common.min' | translate}}</h5>
-        <div class="btn-secondary-light btn-medium btn" (click)="onConfirmJobButtonClick()">{{'assignment.status.reply' | translate}}</div>
+        <div class="btn-primary-light btn-large btn provide-answer-button" (click)="onConfirmJobButtonClick()">{{'assignment.status.reply' | translate}}</div>
       </div>
 
       <h5 class="hired-text" *ngIf="userJob && userJob.job_ended">{{'assignment.status.finished' | translate}}</h5>
