Removed left-right margin
Needed to remove to make sure the button is not to large for smaller
devices.

--- a/src/app/views/job-details/job-details.component.scss
+++ b/src/app/views/job-details/job-details.component.scss
@@ -71,6 +71,11 @@
   margin-right: auto;
 }
 
+.provide-answer-button {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 .job-status-icon-container {
   display: flex;
   align-items: center;
